--- a/_data/pageconfig/team.yml
+++ b/_data/pageconfig/team.yml
@@ -14,7 +14,7 @@ members:
       having consulted, worked, and created companies in the fields of Applied AI, Quantitative 
       Financial Engineering, Quantum Computing, B2B/B2C SaaS, and Blockchain, focusing on Scalability, 
       CyberSec and Performance plus having directly managed 30+ engineers in various enterprises.</p>
-      <p>His expertise lies in Architectural Design, Development, and Deployment for complex technical 
+      <p>His expertise lies in Architectural Design, Development, and Deployment on AWS, GCP, Fujitsu, and DigitalOcean for complex technical 
       and functional challenges.</p>
       <p>He excels in delivering outstanding communication skills and laser-focused detail-oriented execution.</p>
 
@@ -43,7 +43,10 @@ members:
       <p>He's honed his craft in the FinTech and Machine Tool industries, specialising in
       developing bespoke products for processing large, heterogenous data sources 
       and delivering industrial data management solutions in on-premise, hybrid, and
-      public cloud environments.</p><p>A passionate team leader, we're fortunate to be able
+      public cloud environments.</p>
+      <p>His expertise lies in Architectural Design, Development, and Deployment on AWS and DigitalOcean for complex technical 
+      and functional challenges.</p>
+      <p>A passionate team leader, we're fortunate to be able
       to count on his skills in multidisciplinary team and product management, developed over
       the course of his tenure as CTO in three different companies prior to joining the AxOps&#8482; team.</p>
   
@@ -58,7 +61,7 @@ members:
       and Consultant for risk management services on both Buy and Sell sides.</p><p>He has a background in
       Electrical and Hardware Engineering, as well as EMC-compliant multi-layer digital-analog PCB design.</p>
       <p>His specialities include the design and development of systematic analytics and forecasting models for
-      extremely large, high density, and high frequency time series datasets, and their deployment as microservices.</p>
+      extremely large, high density, and high frequency time series datasets, and their deployment as microservices on AWS and DigitalOcean.</p>
   
   -
     name: Tiniki (Generative AI)
@@ -85,10 +88,10 @@ members:
     image_srcset: &site_url /assets/img/photos/team/ali-saif-1.jpg 2x
     role: Technical Solutions Architect
     bio: >
-      <p>Ali has over two decades worth of battle scars earned as a Software Engineer, Technical Architect, 
+      <p>Ali is an AWS Certified DevOps Engineer Professional, and has over two decades worth of battle scars earned as a Software Engineer, Technical Architect, 
       Quant Developer, and Technical Trainer in the Professional IT Services, Decision Intelligence, 
       FinTech, Quantitative Finance, Applied AI/ML, and EdTech industries.</p> 
-      <p>He specialises in end-to-end Design, Implementation, and Delivery of Big Data and Cloud Data Solutions, and setting 
+      <p>He specialises in Design, Implementation, and Delivery of Big Data and Cloud Data Solutions, and setting 
       up Data Engineering practices across Architecture, Design, Development & Deployment.</p>
       <p>He has strong stakeholder-management skills, having worked closely with C-Suite leaders, clients, 
       engineering and cross-functional teams of all sizes.</p>
