--- a/_data/pageconfig/team.yml
+++ b/_data/pageconfig/team.yml
@@ -17,6 +17,12 @@ members:
       <p>His expertise lies in Architectural Design, Development, and Deployment on AWS, GCP, Fujitsu, and DigitalOcean for complex technical 
       and functional challenges.</p>
       <p>He excels in delivering outstanding communication skills and laser-focused detail-oriented execution.</p>
+    skills:
+      - AWS
+      - GCP
+      - Fujitsu
+      - Blockchain Development
+      - Solution Architecture
 
   -
     name: Moira Khan
@@ -31,6 +37,10 @@ members:
       communication and people management.</p><p>Pressure fears this lady, as she works extremely well under it, aside from
       having an incredible knack for resolving complex challenges in record time.</p><p>As our clients have rightly said over
       time: <i>"Everyone needs a Moira; problem is, there's only one Moira."</i></p>
+    skills:
+      - Team Leadership
+      - Project Management
+      - Programme Management
   
   -
     name: Alain Porto
@@ -49,6 +59,12 @@ members:
       <p>A passionate team leader, we're fortunate to be able
       to count on his skills in multidisciplinary team and product management, developed over
       the course of his tenure as CTO in three different companies prior to joining the AxOps&#8482; team.</p>
+    skills:
+      - AWS
+      - DigitalOcean
+      - DevOps
+      - TeamOps
+      - Solution Architecture
   
   -
     name: Martí Castany
@@ -62,6 +78,13 @@ members:
       Electrical and Hardware Engineering, as well as EMC-compliant multi-layer digital-analog PCB design.</p>
       <p>His specialities include the design and development of systematic analytics and forecasting models for
       extremely large, high density, and high frequency time series datasets, and their deployment as microservices on AWS and DigitalOcean.</p>
+    skills:
+      - AWS
+      - DigitalOcean
+      - Quant R&D
+      - DevOps
+      - Solution Architecture
+      - TeamOps
   
   -
     name: Tiniki (Generative AI)
@@ -80,7 +103,11 @@ members:
       <p>Saad has extensive leadership experience in companies around the world such as Amazon, Deloitte, Cisco and HSBC. He has an MBA from the University of Michigan and is passionate about using technology to drive innovation and impact.</p>
       <p>He is a natural leader, a team player with an entrepreneurial spirit, with a passion for using technology and design to drive development of new and innovative solutions to challenging business problems.</p>
       <p>He has a demonstrated ability to ideate, allocate resources, build solutions, and overcome complex challenges to drive from issue to impact.</p>
-
+    skills:
+      - Business Strategy
+      - Team Management
+      - Project Management
+      - Corporate Leadership
   -
     name: Ali Saif
     slug: ali-saif
@@ -95,6 +122,12 @@ members:
       up Data Engineering practices across Architecture, Design, Development & Deployment.</p>
       <p>He has strong stakeholder-management skills, having worked closely with C-Suite leaders, clients, 
       engineering and cross-functional teams of all sizes.</p>
+    skills:
+      - AWS
+      - DevOps
+      - Quant R&D
+      - TeamOps
+      - Technical Architecture
 
   -
     name: Squirrel (Generative AI)
