updated partner layout + yaml

--- a/_data/pageconfig/partners.yml
+++ b/_data/pageconfig/partners.yml
@@ -4,20 +4,21 @@ tagline_main: AxOps™ engages select IT vendors to augment our services &#12930
 site_url: https://axopstech.github.io
 members:
   -
-    name: iQlink
+    name: iQlink Limited
+    link: https://iqlink.co.uk/?utm_source=axops&utm_medium=axops-partners-page
     enabled: true
     image_src: &site_url /assets/img/partners/iqlink-2.jpg
     image_srcset: &site_url /assets/img/partners/iqlink-2.jpg 2x
-    role: PSA & CRM Solutions
+    role: 
     bio: >
-      <p>iQlink's team have, between them, many years' experience working with the Intapp DealCloud and Salesforce.com platforms.</p>
-      <p>We can deliver services using our certified Salesforce Administrators, together with minor developments and enhancements.</p>
-      <p>We have over 10 years' experience in delivering implementation, development, and integration solutions on the Kantata SX PSA solution.</p>
-      <p>We also provide extensive practical experience gained across the professional service, legal, and consultancy sectors.</p>
-
-  -
-    name: Cintra
-    enabled: false
-    image_src: &site_url /assets/img/partners/cintra.jpg
-    image_srcset: &site_url /assets/img/partners/cintra.jpg 2x
-    role: Enterprise Managed Services
+      <p>iQlink's team have many years' experience working with the Intapp DealCloud, Kantata SX (formerly Kimble PSA), and Salesforce.com platforms, 
+      delivering services backed by certified Salesforce Administrators, and veteran Kantata SX experts.</p>
+      <p>They have over 10 years' experience in delivering implementation, development, and integration solutions on the Kantata SX PSA solution, 
+      PSA/CRM Administration, Data Integrations and Interfacing.</p>
+      <p>Their services coupled with their extensive practical experience in the Professional Service, Legal, 
+      and Consultancy sectors, making them one of our most valued partners.</p>
+    skills:
+      - Kantata SX (formerly Kimble PSA)
+      - Intapp DealCloud
+      - Salesforce
+      - PSA & CRM Solutions
