--- a/_data/pageconfig/partners.yml
+++ b/_data/pageconfig/partners.yml
@@ -15,8 +15,8 @@ members:
       delivering services backed by certified Salesforce Administrators, and veteran Kantata SX experts.</p>
       <p>They have over 10 years' experience in delivering implementation, development, and integration solutions on the Kantata SX PSA solution, 
       PSA/CRM Administration, Data Integrations and Interfacing.</p>
-      <p>Their services coupled with their extensive practical experience in the Professional Service, Legal, 
-      and Consultancy sectors, making them one of our most valued partners.</p>
+      <p>Their services coupled with their extensive practical experience in the Professional Services, Legal, 
+      and Consultancy sectors, makes them one of our most valued partners.</p>
     skills:
       - Kantata SX (formerly Kimble PSA)
       - Intapp DealCloud
