--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -61,10 +61,14 @@ why_choose_us_section:
       summary: Leverage the Cloud to reduce fixed costs and focus on value creation.
       tagline: Cloud adoption can rapidly reduce your CapEx <span class="underline">and</span> OpEx, but there’s more to it than just "well-oiled machinery".
       text: "To truly appreciate the benefits of the Cloud, it's important to align your business to take advantage of them. We'll help you address:"
-      image1_src: ./assets/img/photos/about7.jpg
-      image1_srcset: ./assets/img/photos/about3@2x.jpg 2x
-      image2_src: ./assets/img/photos/home/cost-of-ownership-1.jpg
-      image2_srcset: ./assets/img/photos/home/cost-of-ownership-1.jpg 2x
+      image1_src: ./assets/img/illustrations/home/cost-of-ownership-1-v2.jpg
+      image1_srcset: ./assets/img/illustrations/home/cost-of-ownership-1-v2.jpg 2x
+      image2_src: ./assets/img/illustrations/home/cost-of-ownership-2-v2.jpg
+      image2_srcset: ./assets/img/illustrations/home/cost-of-ownership-2-v2.jpg 2x
+      #image1_src: ./assets/img/photos/about7.jpg
+      #image1_srcset: ./assets/img/photos/about3@2x.jpg 2x
+      #image2_src: ./assets/img/photos/home/cost-of-ownership-1.jpg
+      #image2_srcset: ./assets/img/photos/home/cost-of-ownership-1.jpg 2x
       bullets:
         -
           - Inefficiencies in your current environment, e.g. technical debt.
@@ -83,10 +87,14 @@ why_choose_us_section:
       summary: Rapidly and reliably build products and manage operations at scale.
       tagline: Execute workloads efficiently, obtain valuable operational insights, and continuously refine operations to <span class="underline-3 style-2 green">deliver value</span>.
       text: "To achieve operational efficiency, it's essential to understand your workloads and their operating behaviours in detail. We'll help you:"
-      image1_src: ./assets/img/photos/home/operational-efficiency-2a.jpg
-      image1_srcset: ./assets/img/photos/home/operational-efficiency-2a.jpg 2x
-      image2_src: ./assets/img/photos/home/operational-efficiency-1.jpg
-      image2_srcset: ./assets/img/photos/home/operational-efficiency-1.jpg 2x
+      image1_src: ./assets/img/illustrations/home/operational-efficiency-2-v2.jpg
+      image1_srcset: ./assets/img/illustrations/home/operational-efficiency-2-v2.jpg 2x
+      image2_src: ./assets/img/illustrations/home/operational-efficiency-1-v2.jpg
+      image2_srcset: ./assets/img/illustrations/home/operational-efficiency-1-v2.jpg 2x
+      #image1_src: ./assets/img/photos/home/operational-efficiency-2a.jpg
+      #image1_srcset: ./assets/img/photos/home/operational-efficiency-2a.jpg 2x
+      #image2_src: ./assets/img/photos/home/operational-efficiency-1.jpg
+      #image2_srcset: ./assets/img/photos/home/operational-efficiency-1.jpg 2x
       bullets:
         -
           - Design and instrument your workloads to provide telemetry and situational awareness.
@@ -105,10 +113,14 @@ why_choose_us_section:
       summary: Reduce risk, retire technical debt, and focus on drivers that matter.
       tagline: Streamline your business for greater efficiency and faster turnaround times, so you can focus on <span class="underline-3 style-2 yellow">differentiation</span> &#128161;
       text: "Whatever your innovation goals, adopting the Cloud can increase your chances of success by enabling you to deliver more in less time. We'll assist you with:"
-      image1_src: ./assets/img/photos/home/innovation-2.jpg
-      image1_srcset: ./assets/img/photos/home/innovation-2.jpg 2x
-      image2_src: ./assets/img/photos/home/innovation-3.jpg
-      image2_srcset: ./assets/img/photos/home/innovation-3.jpg 2x
+      image1_src: ./assets/img/illustrations/home/innovation-2-v2.jpg
+      image1_srcset: ./assets/img/illustrations/home/innovation-2-v2.jpg 2x
+      image2_src: ./assets/img/illustrations/home/innovation-1-v2.jpg
+      image2_srcset: ./assets/img/illustrations/home/innovation-1-v2.jpg 2x
+      #image1_src: ./assets/img/photos/home/innovation-2.jpg
+      #image1_srcset: ./assets/img/photos/home/innovation-2.jpg 2x
+      #image2_src: ./assets/img/photos/home/innovation-3.jpg
+      #image2_srcset: ./assets/img/photos/home/innovation-3.jpg 2x
       bullets:
         -
           - Evaluating your environments with a view to establish better, more creative ways of operating.
