updated case studies layout+yaml with categories

--- a/_data/pageconfig/case-studies.yml
+++ b/_data/pageconfig/case-studies.yml
@@ -2,6 +2,20 @@ tagline_intro: Case Studies
 tagline_main: "Our Projects: Past & Present"
 tagline_here: Case Studies
 site_url: https://axopstech.github.io
+services: 
+  - Cloud Engineering
+  - Serverless Computing
+  - Blockchain Development
+  - Application Engineering
+industries:
+  - Energy
+  - FinTech
+  - Financial Services
+  - Social Media Sites
+scales:
+  - Startup
+  - Enterprise
+  - Small & Medium Business
 members:
   quantum-engineering-at-scale-aws.md:
     title: "Case Study: Quantum Financial Engineering on AWS and Fujitsu"
@@ -10,6 +24,7 @@ members:
     image_src: &site_url /assets/img/illustrations/case-studies/quantum-engineering-at-scale-aws.jpg
     industry: Financial Services
     service: Cloud Engineering
+    scale: Enterprise
     challenges: >
       <p>The financial industry has been facing challenges with traditional portfolio optimization methods, 
       which are based on historical data and do not take into account the potential impact of real-time macroeconomic 
@@ -64,6 +79,7 @@ members:
     image_src: &site_url /assets/img/illustrations/case-studies/streamlining-expense-processing-aws-salesforce.jpg
     industry: Energy
     service: Serverless Computing
+    scale: Enterprise
     challenges: >
       <p>The client using Salesforce as its CRM, faced challenges with manual processing and review of invoice, timesheet, and receipt data sent in by employees. 
       The process was time-consuming, and certain characteristics of an App the client used to process expenses in their Salesforce instance 
@@ -127,6 +143,7 @@ members:
     image_src: &site_url /assets/img/illustrations/case-studies/social-media-super-app-aws.jpg
     industry: Social Media Sites
     service: Cloud Engineering
+    scale: Startup
     challenges: >
       <p>The social media landscape is highly competitive, with a variety of platforms catering to different types of content 
       creation and sharing.</p>
@@ -173,6 +190,7 @@ members:
     image_src: &site_url /assets/img/illustrations/case-studies/multi-tenancy-saas-financial-risk-management.jpg
     industry: FinTech
     service: Application Engineering
+    scale: Enterprise
     challenges: >
       <p>In the investment finance industry, risk management and regulatory compliance are a crucial aspect of operations. In this 
       project, we built a multi-tenant SaaS platform that utilises artificial intelligence to automate and analyze risk. </p>
@@ -212,6 +230,7 @@ members:
     image_src: &site_url /assets/img/illustrations/case-studies/blockchain-powered-mobility-service-aws-gcp.jpg
     industry: Transportation
     service: Blockchain Development
+    scale: Startup
     challenges: >
       <p>The taxi industry has been facing challenges with centralised systems and lack of transparency. Upon finalising the scope with
       the client, we set out to create a highly available, blockchain-based mobility solution for the taxi industry 
@@ -262,6 +281,7 @@ members:
     image_src: &site_url /assets/img/illustrations/case-studies/decentralized-p2p-challenges-aws.jpg
     industry: FinTech
     service: Blockchain Development
+    scale: Startup
     challenges: >
       <p>The FinTech payments industry has traditionally been centralised, with a few large companies controlling the majority of the market. 
       However, with the advent of blockchain technology, the client saw an opportunity to create decentralised peer-to-peer 
