minor updates to team profile yaml

--- a/_data/pageconfig/team.yml
+++ b/_data/pageconfig/team.yml
@@ -8,7 +8,7 @@ members:
     slug: eriz-zarate
     image_src: &site_url /assets/img/photos/team/eriz-zarate.jpg
     image_srcset: &site_url /assets/img/photos/team/eriz-zarate.jpg 2x
-    role: Blockchain Solution Architect
+    role: Technical Solutions Architect
     bio: >
       <p>Eriz brings to AxOps&#8482;, over 10 years of experience in C-suite technical and management roles, 
       having consulted, worked, and created companies in the fields of Applied AI, Quantitative 
@@ -69,7 +69,7 @@ members:
     slug: marti-castany
     image_src: &site_url /assets/img/photos/team/marti-castany.jpg
     image_srcset: &site_url /assets/img/photos/team/marti-castany.jpg 2x
-    role: Quant R&D Consultant
+    role: Data Analytics Architect
     bio: >
       <p>Martí brings to AxOps&#8482;, over 8 years' experience as a Quantitative Researcher, Portfolio Manager 
       and Consultant for risk management services on both Buy and Sell sides.</p><p>He has a background in
